[FIX] 修复sonar覆盖率为0的问题